# maycoon

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  faq.md  release-plz.toml  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: add-widget.md  bug_report.md  feature_request.md
.github/workflows/: build.yml  contributors.yml  release.yml
examples/: Cargo.toml  counter.rs  hello-world.rs
examples/animation/: Cargo.toml
examples/animation/src/: main.rs
examples/canvas/: Cargo.toml
examples/canvas/src/: main.rs
examples/checkbox/: Cargo.toml
examples/checkbox/src/: main.rs
examples/component/: Cargo.toml
examples/component/src/: counter.rs  main.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/fetcher/: Cargo.toml
examples/fetcher/src/: main.rs
examples/gesture_detector/: Cargo.toml
examples/gesture_detector/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/icon/: Cargo.toml
examples/icon/src/: main.rs
examples/image/: Cargo.toml
examples/image/src/: main.rs
examples/plugin/: Cargo.toml
examples/plugin/src/: main.rs  plugin.rs
examples/slider/: Cargo.toml
examples/slider/src/: main.rs
examples/switch/: Cargo.toml
examples/switch/src/: main.rs
examples/tracing-flame/: Cargo.toml  README.md
examples/tracing-flame/src/: main.rs
may-core/: Cargo.toml
may-core/src/: config.rs  error.rs  gl.rs  handler.rs  layout.rs  lib.rs  render.rs  state.rs  util.rs  widget.rs
may-core/src/app/: context.rs  diagnostics.rs  font_ctx.rs  handler.rs  info.rs  mod.rs  page.rs  render.rs  update.rs
may-core/src/widget/: interaction.rs  mod.rs  update.rs
may-core/src/widget/canvas/: mod.rs  rect.rs
may-core/src/widget/widgets/: button.rs  mod.rs  text.rs
may-macro/: Cargo.toml  README.md
may-macro/src/: lib.rs  state.rs
may-math/: Cargo.toml
may-math/src/: rect.rs  scala.rs  size.rs
may-theme/: Cargo.toml  README.md
may-theme/src/: colors.rs  globals.rs  id.rs  lib.rs  scheme.rs  style.rs  theme.rs
may-theme/src/theme/: celeste.rs  mod.rs
may-theme/src/themes/: light.rs  mod.rs
may-widgets/: Cargo.toml
may-widgets/src/: button.rs  container.rs  dummy.rs  image.rs  lib.rs  text.rs
maycoon-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
maycoon-core/assets/Noto Sans Font/: README.md
maycoon-core/src/: component.rs  config.rs  layout.rs  lib.rs  platform.rs  plugin.rs  reference.rs  state.rs  widget.rs
maycoon-core/src/app/: context.rs  diagnostics.rs  font_ctx.rs  handler.rs  info.rs  mod.rs  runner.rs  update.rs
maycoon-core/src/signal/: actor.rs  eval.rs  fixed.rs  listener.rs  map.rs  memoized.rs  mod.rs  rw.rs  state.rs
maycoon-core/src/tasks/: fetcher.rs  mod.rs  runner.rs  task.rs  waker.rs
maycoon-core/src/tasks/runner/: futures_runner.rs  mod.rs  tokio.rs  tokio_runner.rs
maycoon-core/src/vgi/: dummy.rs  mod.rs  vello.rs
maycoon-macros/: CHANGELOG.md  Cargo.toml
maycoon-macros/src/: assets.rs  lib.rs  state.rs  svg_icon.rs  val.rs
maycoon-theme/: CHANGELOG.md  Cargo.toml
maycoon-theme/src/: id.rs  lib.rs  style.rs
maycoon-theme/src/theme/: celeste.rs  dummy.rs  mod.rs  mod.rs~
maycoon-widgets/: CHANGELOG.md  Cargo.toml  README.md
maycoon-widgets/src/: animator.rs  button.rs  canvas.rs  checkbox.rs  checkbox.rs~  container.rs  dummy.rs  ext.rs  fetcher.rs  gesture_detector.rs  icon.rs  image.rs  image.rs~  lib.rs  slider.rs  switch.rs  text.rs
maycoon-widgets/src/icon/: mod.rs  svg.rs  svg.rs~
src/: lib.rs
ui-math/: Cargo.toml
ui-math/src/: lib.rs  point.rs  rect.rs  scala.rs  size.rs
