[workspace]
members = ["maycoon-core", "maycoon-macros", "maycoon-theme", "maycoon-widgets", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mikail Plotzky <mp@ypon.com>", "Maycoon Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maycoon-ui/maycoon"
homepage = "https://maycoon-ui.github.io"
categories = ["gui", "graphics", "rendering", "virtualization", "rendering::engine"]
keywords = ["ui", "gui", "interface", "graphics", "user-interface"]

[workspace.dependencies]
peniko = "0.2.0"
nalgebra = { version = "0.33.0", default-features = false, features = ["std"] }
indexmap = "2.6.0"
maycoon-core = { version = "0.1.0", path = "maycoon-core" }
maycoon-macros = { version = "0.1.0", path = "maycoon-macros" }
maycoon-theme = { version = "0.1.0", path = "maycoon-theme" }
maycoon-widgets = { version = "0.1.0", path = "maycoon-widgets" }

[package]
name = "maycoon"
description = "Lightning fast and powerful UI Framework for Rust."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
maycoon-core = { workspace = true }
maycoon-theme = { workspace = true }
maycoon-widgets = { workspace = true }
maycoon-macros = { workspace = true, optional = true }
peniko = { workspace = true }
nalgebra = { workspace = true }

[features]
default = ["macros"]
macros = ["maycoon-macros"]
vg = ["maycoon-core/vg"]

[lib]
name = "maycoon"
path = "src/lib.rs"
