[workspace]
members = ["maycoon-core", "maycoon-macros", "maycoon-theme", "maycoon-widgets", "examples/*"]

[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["Mikail Plotzky <mp@ypon.com>", "Maycoon Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maycoon-ui/maycoon"
homepage = "https://maycoon-ui.github.io"
categories = ["gui", "graphics", "rendering", "virtualization", "rendering::engine"]
keywords = ["ui", "gui", "interface", "graphics", "user-interface"]

[workspace.dependencies]
bytemuck = "1.23.0"
peniko = "0.3.1"
nalgebra = { version = "0.33.2", default-features = false, features = ["std"] }
indexmap = "2.9.0"
log = "0.4.22"
maycoon-core = { version = "0.3.2", path = "maycoon-core" }
maycoon-macros = { version = "0.3.2", path = "maycoon-macros" }
maycoon-theme = { version = "0.3.2", path = "maycoon-theme" }
maycoon-widgets = { version = "0.3.2", path = "maycoon-widgets" }

[package]
name = "maycoon"
description = "Lightning fast and powerful UI Framework for Rust."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
maycoon-core = { workspace = true }
maycoon-theme = { workspace = true }
maycoon-widgets = { workspace = true }
maycoon-macros = { workspace = true, optional = true }
peniko = { workspace = true }
nalgebra = { workspace = true }

[features]
default = ["macros"]

# Exports useful macros for working with maycoon.
macros = ["maycoon-macros"]

# Exports `vello` and `skrifa` for drawing vector graphics. Useful if you want to create custom widgets.
vg = ["maycoon-core/vg"]

# Enables the `Canvas` widget for drawing to the screen.
canvas = ["maycoon-widgets/canvas"]

# Include the `Noto Sans` font as a default font. If disabled, you must specify a default font using the `FontContext`.
include-noto-sans = ["maycoon-core/include-noto-sans"]

[lib]
name = "maycoon"
path = "src/lib.rs"
