[workspace]
members = ["maycoon-core", "maycoon-macros", "maycoon-theme", "maycoon-widgets", "examples/*"]

[workspace.package]
version = "0.5.1"
edition = "2024"
authors = ["Mikail Plotzky <mp@ypon.com>", "Maycoon Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maycoon-ui/maycoon"
homepage = "https://maycoon-ui.github.io"
categories = ["gui", "graphics", "rendering", "virtualization", "rendering::engine"]
keywords = ["ui", "gui", "interface", "graphics", "user-interface"]

[workspace.dependencies]
bytemuck = "1.24.0"
peniko = "0.5.0"
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
indexmap = "2.12.0"
tracing = "0.1.41"
cfg_aliases = "0.2.1"
maycoon-core = { version = "0.5.1", path = "maycoon-core" }
maycoon-macros = { version = "0.5.1", path = "maycoon-macros" }
maycoon-theme = { version = "0.5.1", path = "maycoon-theme" }
maycoon-widgets = { version = "0.5.1", path = "maycoon-widgets" }

[package]
name = "maycoon"
description = "Lightning fast and powerful UI Framework for Rust."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
maycoon-core = { workspace = true }
maycoon-theme = { workspace = true }
maycoon-widgets = { workspace = true }
maycoon-macros = { workspace = true, optional = true }
peniko = { workspace = true }
nalgebra = { workspace = true }

[features]
default = ["macros", "vello-vg", "tokio-runner"]

# Exports useful macros for working with maycoon.
macros = ["maycoon-macros"]

# Enables the `Canvas` widget for drawing to the screen.
canvas = ["maycoon-widgets/canvas"]

# A dummy task runner. Can be used, when you don't want to specify a task runner, but still let the build script execute.
dummy-runner = ["maycoon-core/dummy-runner"]

# Use the `tokio` runtime for running tasks inside a task runner.
tokio-runner = ["maycoon-core/tokio-runner"]

# Enables structures and widgets for working with SVGs.
svg = ["maycoon-core/svg", "maycoon-widgets/svg"]

# Enables the `vello` vector graphics backend.
vello-vg = ["maycoon-core/vello-vg"]

[lib]
name = "maycoon"
path = "src/lib.rs"
