[package]
name = "may-core"
version = "0.1.0"
edition = "2021"
authors = ["Mikail Plotzky <mp@ypon.com>", "Maycoon Contributors"]
description = "Core library for Maycoon => See `maycoon` crate"
repository = "https://github.com/maycoon-ui/maycoon"
homepage = "https://maycoon-ui.github.io"

[dependencies]
winit = { version = "0.29.2", default-features = false, features = ["rwh_05", "mint"] }
raw-window-handle = "0.5.2"
glutin = "0.31.3"

cfg-if = { workspace = true }

ui-math = { path = "../ui-math" }
may-theme = { path = "../may-theme" }

femtovg = { workspace = true }

taffy = "0.4.3"

[features]
default = ["roboto-font"]
roboto-font = []
