[package]
name = "may-core"
version = "0.1.0"
edition = "2021"
authors = ["Mikail Plotzky <mp@ypon.com>", "Maycoon Contributors"]
description = "Core library for Maycoon => See `maycoon` crate"
repository = "https://github.com/maycoon-ui/maycoon"
homepage = "https://maycoon-ui.github.io"

[dependencies]
pathfinder_canvas = { workspace = true }
pathfinder_gl = { workspace = true }
pathfinder_geometry = { workspace = true }
pathfinder_gpu = { workspace = true }
pathfinder_resources = { workspace = true }
pathfinder_renderer = { workspace = true }
pathfinder_color = { workspace = true }
surfman = { workspace = true }
euclid = { workspace = true }
gl = "0.14.0"
winit = "0.29.10"
may-theme = { path = "../may-theme" }
taffy = "0.4.4"

[features]
default = ["roboto-font"]
roboto-font = []
