[package]
name = "may-core"
version = "0.1.0"
edition = "2021"
authors = ["Mikail Plotzky <mp@ypon.com>", "Maycoon Contributors"]
description = "Core library for Maycoon => See `maycoon` crate"
repository = "https://github.com/maycoon-ui/maycoon"
homepage = "https://maycoon-ui.github.io"

[dependencies]
winit = "0.30.3"
futures-lite = "2.3.0"
wgpu-types = "0.20.0"
vello = "0.2.0"
taffy = "0.5.2"
bitflags = "2.6.0"
may-theme = { path = "../may-theme" }
nalgebra = { workspace = true }
dashmap = { workspace = true }
peniko = { workspace = true }

[features]
default = []

# Re-exports `vello` for drawing vector graphics.
# Required if you want to make custom widgets or draw vector graphics.
vg = []
