[package]
name = "may-macro"
version = "0.1.0"
edition = "2021"
authors = ["Mikail Plotzky <mp@ypon.com>", "Maycoon Contributors"]
description = "Procedural macros for Maycoon => See `maycoon` crate"
repository = "https://github.com/maycoon-ui/maycoon"
homepage = "https://maycoon-ui.github.io"

[dependencies]
may-core = { path = "../may-core" }
syn = "2.0.68"
quote = "1.0.36"
proc-macro2 = "1.0.86"

[lib]
proc-macro = true
