[package]
name = "may-theme"
version = "0.1.0"
edition = "2021"
authors = ["Mikail Plotzky <mp@ypon.com>", "Maycoon Contributors"]
description = "Theme & Styling for Maycoon => See `maycoon` crate"
repository = "https://github.com/maycoon-ui/maycoon"
homepage = "https://maycoon-ui.github.io"

[dependencies]
dashmap = { workspace = true }
peniko = { workspace = true }
