[package]
name = "maycoon-core"
description = "Core Functionality for Maycoon UI => See the `maycoon` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
winit = "0.30.12"
wgpu-types = "26.0.0"
vello = "0.6.0"
taffy = "0.9.1"
bitflags = "2.9.4"
font-kit = "0.14.3"
skrifa = { version = "0.37.0", optional = true }
arc-swap = "1.7.1"
parking_lot = "0.12.5"
pollster = "0.4.0"
tokio = { version = "1.48.0", features = ["parking_lot", "rt-multi-thread"], optional = true }
maycoon-theme = { workspace = true }
nalgebra = { workspace = true }
indexmap = { workspace = true }
peniko = { workspace = true }
tracing = { workspace = true }

[features]
default = []
include-noto-sans = []
vg = ["skrifa"]
tokio-runner = ["tokio"]
