[package]
name = "maycoon-core"
description = "Core Functionality for Maycoon UI => See the `maycoon` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
winit = "0.30.12"
taffy = "0.9.1"
bitflags = "2.9.4"
pollster = "0.4.0"

tokio = { version = "1.48.0", features = ["parking_lot", "rt-multi-thread"], optional = true }

vello = { version = "0.6.0", optional = true }
vello_svg = { version = "0.8.0", optional = true, features = ["wgpu"] }
skrifa = { version = "0.37.0", optional = true }
bytemuck = { version = "1.24.0", optional = true }
wgpu-types = { version = "26.0.0", optional = true }

usvg = { version = "0.45.1", optional = true }

maycoon-theme = { workspace = true }
nalgebra = { workspace = true }
indexmap = { workspace = true }
peniko = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"

[build-dependencies]
cfg_aliases = "0.2.1"

[features]
default = []
include-noto-sans = []
tokio-runner = ["tokio"]
svg = ["usvg"]
vello-vg = ["vello", "vello_svg", "skrifa", "bytemuck", "wgpu-types"]
