[package]
name = "maycoon-macros"
description = "Macros for Maycoon UI => See the `maycoon` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
syn = "2.0.95"
quote = "1.0.38"
proc-macro2 = "1.0.92"

[lib]
proc-macro = true
