[package]
name = "maycoon-macros"
description = "Macros for Maycoon UI => See the `maycoon` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
syn = "2.0.100"
quote = "1.0.40"
proc-macro2 = "1.0.95"
ureq = "3.0.11"

[lib]
proc-macro = true
