[package]
name = "maycoon-macros"
description = "Macros for Maycoon UI => See the `maycoon` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
syn = "2.0.109"
quote = "1.0.42"
proc-macro2 = "1.0.103"
ureq = "3.1.2"

[lib]
proc-macro = true
