[package]
name = "maycoon-widgets"
description = "Widgets for Maycoon UI => See the `maycoon` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
maycoon-theme = { workspace = true }
maycoon-core = { workspace = true, features = ["vg"] }
nalgebra = { workspace = true }

[features]
default = []
canvas = []
