[package]
name = "maycoon-widgets"
description = "Widgets for Maycoon UI => See the `maycoon` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
vello_svg = { version = "0.6.0", default-features = false }
maycoon-theme = { workspace = true }
maycoon-core = { workspace = true, features = ["vg"] }
bytemuck = { workspace = true }
nalgebra = { workspace = true }

[features]
default = []

# Enables the `Canvas` widget for drawing to the screen.
canvas = []
