[package]
name = "maycoon-widgets"
description = "Widgets for Maycoon UI => See the `maycoon` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
maycoon-theme = { workspace = true }
maycoon-core = { workspace = true, features = ["dummy-runner"] }
nalgebra = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[features]
default = []
canvas = []
svg = ["maycoon-core/svg"]
